--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -108,10 +108,10 @@ errorPlot_fields(DL1202_proofed, loc = "all")
 errorPlot_fields(DL1202_proofed, loc = "SC")
 ```
 
-The year can also be specified in `errorPlot_fields` to visualize the proportion of "errors" created by youth hunters, since their birth dates fall outside the expected parameters of the `proof` function.
+The year in which the HIP data were collected can also be specified in `errorPlot_fields` to visualize the proportion of "errors" created by youth hunters and Canadian zip codes, since these values fall outside the expected parameters of the `proof` function. It is encouraged to use `specify` when error counts are high to increase transparency by revealing which errors are attributable to a specific cause. This feature should also help maintain confidence in the integrity of the data.
 
 ```{r errorfieldsplotyouth, fig.width = 6}
-errorPlot_fields(DL1202_proofed, loc = "SC", year = 2020)
+errorPlot_fields(DL1202_proofed, specify = 2020)
 ```
 
 
