--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -101,19 +101,19 @@ The year of the Harvest Information Program must be supplied as a parameter. Thi
 
 The `errorPlot_fields` function can be run on all states, provinces, and/or territories in the data...
 
-```{r errorfieldsplotall, fig.width = 6}
+```{r errorfieldsplotall, fig.width = 6, fig.height = 4}
 errorPlot_fields(DL1202_proofed, loc = "all")
 ```
 
 ... or it can be limited to just one.
 
-```{r errorfieldsplotsc, fig.width = 6}
+```{r errorfieldsplotsc, fig.width = 6, fig.height = 4}
 errorPlot_fields(DL1202_proofed, loc = "SC")
 ```
 
 The year in which the HIP data were collected can also be specified in `errorPlot_fields` to visualize the proportion of "errors" created by youth hunters and Canadian zip codes, since these values fall outside the expected parameters of the `proof` function. It is encouraged to use `specify` when error counts are high to increase transparency by revealing which errors are attributable to a specific cause. This feature should also help maintain confidence in the integrity of the data.
 
-```{r errorfieldsplotyouth, fig.width = 6}
+```{r errorfieldsplotyouth, fig.width = 6, fig.height = 4}
 errorPlot_fields(DL1202_proofed, specify = 2020)
 ```
 
@@ -126,7 +126,7 @@ The `errorPlot_states` function can plot errors as either proportions or counts 
 errorPlot_states(DL1202_proofed, type = "proportion")
 ```
 
-```{r errorstatescount, fig.width = 6}
+```{r errorstatescount, fig.width = 6, fig.height = 3.5}
 errorPlot_states(DL1202_proofed, type = "count")
 ```
 
@@ -142,7 +142,7 @@ findDuplicates(DL1202_proofed)
 
 The `outOfStateHunters` function allows us to visualize how many hunters report harvests from a location that does not match the state, province, or territory of their address. A list is returned from this function, so a table can be written to .csv from the first list element if needed.
 
-```{r outofstate, fig.width = 6}
+```{r outofstate, fig.width = 6, fig.height = 3.5}
 outOfStateHunters(DL1202_proofed)
 ```
 
