--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -15,6 +15,7 @@ vignette: >
     - [compile](#compile)
     - [compile_to_utf8](#compile_to_utf8)
     - [tidy](#tidy)
+    - [validate](#validate)
     - [proof](#proof)
 - [Stage 2: Visualize Data](#stage-2-visualize-data)
     - [errorPlot_fields](#errorplot_fields)
@@ -82,6 +83,14 @@ This function renames columns and does simple mutations, such as:
 * Moves suffixes from first or last name columns to the appropriate suffix column
 * Removes punctuation from middle initial column
 * Removes ending hyphen from zip codes with only 5 digits
+
+### validate
+
+```{r, validate}
+validate(DL1202_tidied)
+```
+
+An important intermediate step is to `validate` the data. This function can be run on the data after they are tidied. It looks across download states and download dates to make sure that uniform numbers were not reported across bags. If a uniformity is detected, the errors are returned in a tibble with a warning. If there are no uniformities, a positive message is returned.
 
 ### proof
 
