--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -11,13 +11,13 @@ output:
 
 ```{r import, include = FALSE}
 
-season_data <- compile_to_utf8(param$comp_path)
+season_data <- compile_to_utf8(params$comp_path)
 
 tidy_data <- tidy(season_data)
 
-proofed_data <- proof(tidied_data, year = param$year)
+proofed_data <- proof(tidied_data, year = params$year)
 
-corrected_data <- correct(proofed_data, year = param$year)
+corrected_data <- correct(proofed_data, year = params$year)
 
 ```
 
@@ -33,12 +33,12 @@ This is a report of download cycle `proofed_data$dl_cycle %>% distinct %>% pull`
 
 #### Before correction
 ```{r erpf, echo = FALSE}
-errorPlot_fields(proofed_data, specify = param$year)
+errorPlot_fields(proofed_data, specify = params$year)
 ```
 
 #### After correction
 ```{r erpf_c, echo = FALSE}
-errorPlot_fields(corrected_data, specify = param$year)
+errorPlot_fields(corrected_data, specify = params$year)
 ```
 
 ### Errors by state
