updated params in yaml

--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -7,6 +7,11 @@ output:
     toc_depth: 3
     number_sections: true
     theme: cerulean
+params:
+  comp_path:
+    value: x
+  year:
+    value: x
 ---
 
 ```{r import, include = FALSE}
