--- a/README.Rmd
+++ b/README.Rmd
@@ -34,6 +34,7 @@ Tasks that can be accomplished with this package include:
 * Error visualization with `errorPlot_dl`, `errorPlot_fields`, and `errorPlot_states`
 * Exploration of specific errors with `findDuplicates`, `youthHunters`, and `outOfStateHunters`
 * Detailed error reporting with `errorTable`, `pullErrors`, and `redFlags`
+* Automated report writing with `writeReport`
 
 ## Installation
 
